--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+<html>
+
 </head>
-<body>
-    <div class="hero">
-        <nav> <img src="pd.jpg" height="90",width="160">
-            <ul>
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">ABOUT</a></li>
-      <li> <a href="#">PORTFOLIO</a></li>
-      <li> <a href="#">SERVICES</a></li>
-      <li> <a href="#">HIRE ME</a></li>
-    </ul>
-        </nav>
-       <div class="det">
-        <h1>Hi! I am Anushri <span>Jamar</span></h1>
-        <p>This is my official portfolio website that shows all<br> my skills and experiences</p>
-        <a href="https://docs.google.com/document/d/1ECDxheKdYx3XFOoxvgJiRtWlseMpimTSsvT0zbNqfuo/edit">Download my Resume</a>
-    </div>
-    <div class="image"><img src="clear.webp" height="500",width="400"></div>
-    </div>
+<style type="text/css">
+p {
+color:white;
+font-size:50px;
+text-align:center;
+}
+.link {
+color:white;
+text-align:center;
+
+}
+</head>
+</style>
+<body bgcolor="#9E63EB ">
+<p></b>WELCOME<b></p>
+<p>What you want to learn?</p>
+<p class="link"><a href="https://github.com/anushrijamar/HTML/blob/main/hsub.html" style="color:white;font-size:100%">Click me for HTML</a></p>
+<p class="link"><a href="https://github.com/anushrijamar/HTML/blob/main/mywebpage.html" style="color:white;font-size:100%">Click me for CSS</a></p>
 </body>
 </html>
